2001-11-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-print-this-url): View current image info.
	(w3m-goto-next-image, w3m-next-image, w3m-goto-previous-image)
	(w3m-previous-image): New functions.
	(w3m-lynx-like-map, w3m-info-like-map): Bind "}" as the key to
	call `w3m-next-image'. Bind "{" as the key to call
	`w3m-previous-image'.
	(w3m-mode): Modify dos-string.

2001-11-19  Masatake YAMATO  <jet@gyve.org>

	* w3m.el (w3m-goto-next-form, w3m-next-form)
	(w3m-goto-previous-form, w3m-previous-form): New functions.
	(w3m-lynx-like-map, w3m-info-like-map): Bind "]" as the key to
	call `w3m-next-form'. Bind "[" as the key to call
	`w3m-previous-form'.
	
2001-11-19  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-ibm-dev.el: Add copyright notice.
	* shimbun/sb-muchy.el: Ditto.
	* shimbun/sb-ruby.el: Ditto.
	* shimbun/sb-vinelinux.el: Ditto.
	* shimbun/sb-w3m-dev.el: Ditto.

2001-11-19  Kazuhiko  <kazuhiko@ring.gr.jp>

	* w3m-xmac.el (w3m-create-image): Fix a problem in handling XBM
	on XEmacs.

2001-11-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-attributes): Establish the error handler for
	`w3m-process-timeout' when the argument `handler' is equal to nil.
	(w3m-retrieve): Ditto.
	(w3m-about-header): Establish the error handler for
	`w3m-process-timeout' before `w3m-w3m-get-header' is called.
	(w3m-select-buffer-close-window): Check whether the menu's window
	exists.

	* w3m-proc.el: Changes to avoid endless loop.
	(w3m-process-start-process): Changed the spec of its return value.
	(w3m-process-timeout): New error symbol.
	(w3m-process-with-wait-handler): Bind `inhibit-quit' to nil, in
	order to accept user's quit; Signal `w3m-process-timeout' when
	time out is detected.
	(w3m-process-do): Accept null variable.
	(w3m-process-do-with-temp-buffer): Ditto.

	* Makefile.in (default): Cancel the last change.

2001-11-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Makefile.in (default): When files which define macros and inline